practice-two/src/css/main.css
.container {
  min-width: 398px;
  padding: 0 16px;
}

.nav-item {
  display: flex;
  justify-content: space-between;
  padding: 32px 0;
}

.logo-item {
  display: flex;
  .logo {
    width: 40px;
    height: 40px;
  }
  .logo-text {
    color: #191825;
    font-size: 24px;
    font-style: normal;
    font-weight: 900;
    line-height: 40px;
    padding-left: 16px;
  }
}

.menu-icon {
  width: 48px;
  height: 48px;
}

.nav-list,
.header-button-group {
  display: none;
}

.best-location-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 32px;
  padding: 32px 0;
}
.best-location-content {
  display: flex;
  flex-direction: column;
  text-align: center;
  gap: 16px;
}
.carousel-button {
  display: flex;
  align-self: stretch;
  justify-content: space-between;
}
.previous-btn {
  min-width: 64px;
  background: #fff;
  border-radius: 100%;
  border: 1px solid var(--border-color);
}
.next-btn {
  width: 64px;
  height: 64px;
  background-color: var(--secondary);
  border-radius: 100%;
  border: none;
}

.best-location-card {
  min-width: 398px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 32px;
  .best-location-card-title,
  .best-location-card-text {
    text-align: unset;
  }
}

.best-location-card-content {
  display: flex;
  flex-direction: column;
  padding: 32px;
  border: 1px solid var(--border-color);
  border-radius: 0 0 32px 32px;
  .star-icon {
    position: absolute;
    margin-left: 8px;
  }
  .price {
    margin-bottom: 8px;
  }
  .best-location-card-title {
    margin-bottom: 16px;
  }
  .best-location-card-text {
    margin-bottom: 32px;
  }
}

@media screen and (min-width: 1024px) {
  .container {
    padding: 0 64px;
  }
  .nav-item {
    display: flex;
    justify-content: space-between;
  }
  .nav-list {
    display: none;
  }
  .header-button-group {
    display: flex;
  }
  .btn-login {
    background-color: var(--background-color);
  }
  .btn-signup {
    color: #fff;
    background-color: var(--secondary);
  }
  .menu-icon {
    order: -1;
  }
}

@media screen and (min-width: 1440px) {
  .container {
    padding: 0 64px;
  }
  .nav-item {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .nav-list {
    display: flex;
    justify-content: space-between;
    gap: 64px;
    font-size: 14px;
    font-style: normal;
    font-weight: 700;
    line-height: 120%;
  }
  .menu-icon {
    display: none;
  }
}

